Bug 499935 - Prefer Color accuracy is causing artifacts with plasma applets when blur effect is active
Summary: Prefer Color accuracy is causing artifacts with plasma applets when blur effe...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: colour-management (other bugs)
Version First Reported In: 6.3.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
: 499982 500304 500658 502155 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-02-12 23:17 UTC by Artem
Modified: 2025-04-02 13:58 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.3
Sentry Crash Report:


Attachments
Bug demonstration (1.83 MB, video/mp4)
2025-02-12 23:17 UTC, Artem
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Artem 2025-02-12 23:17:57 UTC
Created attachment 178236 [details]
Bug demonstration

***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY


STEPS TO REPRODUCE
1. Set color accuracy to "Prefer Color Accuracy"
2. Try to spam a applet button, like start menu

OBSERVED RESULT
Weird flashy colors

EXPECTED RESULT
Stable applet view

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 6.3.0
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.2

ADDITIONAL INFORMATION
Doesn't happen on "Prefer Efficiency"
Comment 1 Vlad Zahorodnii 2025-02-13 16:31:42 UTC
If you disable blur and background contrast effect, is it still reproducible?
Comment 2 Zamundaaa 2025-02-13 16:50:39 UTC
Also, what GPU are you using?
Comment 3 Artem 2025-02-15 18:13:24 UTC
(In reply to Zamundaaa from comment #2)
> Also, what GPU are you using?

Hi! I have a laptop with an integrated Intel UHD 630 GPU
Comment 4 Artem 2025-02-15 18:15:36 UTC
(In reply to Vlad Zahorodnii from comment #1)
> If you disable blur and background contrast effect, is it still reproducible?

Hey Vlad! I have tested, and here are my results:

Blur on Background Contrast off: still same issue
Blurr off Background Contrast off: issue gone
Blurr off Background Contrast on: issue gone
Comment 5 cwo 2025-02-18 17:00:58 UTC
*** Bug 500304 has been marked as a duplicate of this bug. ***
Comment 6 Zamundaaa 2025-02-24 15:50:37 UTC
*** Bug 500658 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2025-02-26 19:02:00 UTC
*** Bug 499982 has been marked as a duplicate of this bug. ***
Comment 8 Zamundaaa 2025-03-05 17:04:36 UTC
I managed to replicate the issue on my Intel laptop, but not on AMD, so I suspect this may be a driver bug around 16 bit buffers. I'll do some more debugging to find out if another buffer format works better.

Is there anyone that has the problem on not-Intel?
Comment 9 Bug Janitor Service 2025-03-05 21:34:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7268
Comment 10 Zamundaaa 2025-03-06 13:41:02 UTC
Git commit b81a8635dd40380bbd4e39d4584221caca1abd8f by Xaver Hugl.
Committed on 06/03/2025 at 13:05.
Pushed by zamundaaa into branch 'master'.

plugins/blur: clear all textures after allocating them

It's not guaranteed that the driver fills them with sane values, if we don't clear
them, then areas of the textures that aren't immediately painted to (like when the
window starts up partially off-screen) can contain random noise and affect the final
result.

M  +4    -0    src/plugins/blur/blur.cpp

https://invent.kde.org/plasma/kwin/-/commit/b81a8635dd40380bbd4e39d4584221caca1abd8f
Comment 11 Zamundaaa 2025-03-06 14:07:05 UTC
Git commit 9621e6b7831b207fe9fcaef58fca6f5849964790 by Xaver Hugl.
Committed on 06/03/2025 at 13:41.
Pushed by zamundaaa into branch 'Plasma/6.3'.

plugins/blur: clear all textures after allocating them

It's not guaranteed that the driver fills them with sane values, if we don't clear
them, then areas of the textures that aren't immediately painted to (like when the
window starts up partially off-screen) can contain random noise and affect the final
result.


(cherry picked from commit b81a8635dd40380bbd4e39d4584221caca1abd8f)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +4    -0    src/plugins/blur/blur.cpp

https://invent.kde.org/plasma/kwin/-/commit/9621e6b7831b207fe9fcaef58fca6f5849964790
Comment 12 Tom Kijas 2025-03-12 12:24:39 UTC
(In reply to Zamundaaa from comment #8)
> I managed to replicate the issue on my Intel laptop, but not on AMD, so I
> suspect this may be a driver bug around 16 bit buffers. I'll do some more
> debugging to find out if another buffer format works better.
> 
> Is there anyone that has the problem on not-Intel?

Hi, I can confirm graphical artifacts when using amdgpu drivers (RX 7800 XT 16GB) after wake from suspend-to-ram.

They mainly occur in games (even in their menus) and/or benchmarks, strange white stripes. After they appear in games, they appear in GPU accelerated in-firefox-opened websites.

Disabling color accuracy seems to disable this behaviour.

I use KDE NEON latest version, resolution of monitor is 3440x1440.
Comment 13 Zamundaaa 2025-04-02 13:58:32 UTC
*** Bug 502155 has been marked as a duplicate of this bug. ***