plugins/blur: clear all textures after allocating them

It's not guaranteed that the driver fills them with sane values, if we don't clear
them, then areas of the textures that aren't immediately painted to (like when the
window starts up partially off-screen) can contain random noise and affect the final
result.

BUG: 499935